	  other than Mac OS X (STR #3495)
	- The scheduler didn't send events when a printer started accepting or
	  rejecting jobs (STR #3480)
	- The web interface now includes additional CSRF protection (STR #3498)


CHANGES IN CUPS V1.4.3

	- SECURITY: The scheduler could try responding on a closed client
	  connection, leading to a crash (STR #3200)
	- Localization updates (STR #3352, STR #3409, STR #3422, STR #3452,
	  STR #3473, STR #3502)
	- Documentation updates (STR #3451, STR #3504)
	- The IPP backend now sets the printer-state-message to "Ready to
	  print." at the end of a successful job (STR #3460)
	- The PPD compiler did not correctly add the manufacturer to the output
	  filename when using the "-m" option (STR #3469)
	- The IPP backend did not handle authentication properly for the Get-
	  Printer-Attributes operation (STR 3458)
	- Getting SNMP values larger than 127 bytes did not work.
	- IPP conformance: Get-Jobs has a default value for requested-attributes
	  (STR #3383)
	- cupsPrintFiles() did not report all errors (STR #3449)
	- cupsAddDest() could read freed memory (STR #3448)
	- The DBUS notifier did not build (STR #3447)
	- The scheduler would crash when an active printer was deleted.
	- The snmp backend did not work with some printers (STR #3413)
	- The web interface did not show the conflicting values when setting
	  options (STR #3440)
	- Setting options in the web interface did not always work (STR #3439)
	- The scheduler did not use the Get-Job-Attributes policy for a printer
	  (STR #3431)
	- The scheduler added two job-name attributes to each job object
	  (STR #3428)
	- CSS files would not print (STR #3442)
	- The scheduler did not clean out completed jobs when PreserveJobHistory
	  was turned off (STR #3425)
	- The web interface did not show completed jobs for a printer
	  (STR #3436)
	- Authenticated printing did not always work when printing directly to
	  a remote server (STR #3435)
	- The USB backend did not work on Solaris (STR #3423)